# forrester_spanner

./: .dockerignore  .gitignore  Dockerfile  build_status.txt  deploy.sh  main.py  pyproject.toml  start.sh  test_spanner_types.py
.agent/skills/AdkAgent/: SKILL.md
.agent/skills/backend/: SKILL.md
.agent/skills/datagen/: SKILL.md
.agent/skills/docker/: SKILL.md
.agent/skills/fullstack/: SKILL.md
backend/: __init__.py  ai.py  config.py  seed_demo.py  test_image.py
backend/svc/: main.py
backend/svc/apis/admin/: submod.py
backend/svc/apis/debug/: submod.py
backend/svc/apis/fraud/: submod.py
backend/svc/apis/geo/: submod.py
backend/svc/apis/oltp/: submod.py
backend/svc/apis/recommendations/: submod.py
backend/svc/apis/search/: mainmod.py  submod.py
backend/svc/core/: clients.py  config.py
backend/svc/routes/: views.py
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ShellLayout.tsx
frontend/src/context/: CartContext.tsx  GeoContext.tsx
frontend/src/views/: CartView.tsx  DbDataView.tsx  FraudView.tsx  GeoView.tsx  GraphView.tsx  RecsView.tsx  SearchView.tsx  SpannerPlaygroundView.tsx
scripts/: cleanup_demo.py  push.sh  schema.ddl  schema_clean.txt  setup_db.sh
tests/: test_db_methods.py
